[gd_scene load_steps=6 format=3 uid="uid://dxt8sattd7yki"]

[ext_resource type="Theme" uid="uid://ce6e52x7jk66v" path="res://ui/menu.tres" id="1_2c24i"]
[ext_resource type="Script" path="res://ui/scripts/main_menu.gd" id="1_7phrt"]
[ext_resource type="Texture2D" uid="uid://cryeiau8hlw2v" path="res://ui/menu_inicio.png" id="1_o7txf"]
[ext_resource type="Texture2D" uid="uid://b8iqajvgwyt1n" path="res://ui/logo_letters.png" id="4_8dj78"]
[ext_resource type="PackedScene" uid="uid://bwpse4ub1mcet" path="res://ui/settings_menu.tscn" id="6_037la"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7phrt")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2c24i")

[node name="Background" type="Sprite2D" parent="Main"]
position = Vector2(576, 324)
scale = Vector2(0.642857, 0.632813)
texture = ExtResource("1_o7txf")

[node name="LogoLetters" type="Sprite2D" parent="Main/Background"]
position = Vector2(410.667, -246.518)
scale = Vector2(1.55556, 1.58025)
texture = ExtResource("4_8dj78")

[node name="Buttons" type="Control" parent="Main/Background"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_2c24i")

[node name="CargarPartidaBtn" type="Button" parent="Main/Background/Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -709.333
offset_top = -335.012
offset_right = -103.333
offset_bottom = -191.012
text = "CARGAR PARTIDA"
metadata/_edit_use_anchors_ = true

[node name="NuevaPartidaBtn" type="Button" parent="Main/Background/Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -704.667
offset_top = -169.086
offset_right = -98.6667
offset_bottom = -25.0864
text = "NUEVA PARTIDA"
metadata/_edit_use_anchors_ = true

[node name="ConfigBtn" type="Button" parent="Main/Background/Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -700.0
offset_top = -6.32095
offset_right = -94.0001
offset_bottom = 137.679
text = "CONFIGURACIÃ“N"
metadata/_edit_use_anchors_ = true

[node name="SalirBtn" type="Button" parent="Main/Background/Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -522.667
offset_top = 170.667
offset_right = -264.667
offset_bottom = 269.667
text = "SALIR"
metadata/_edit_use_anchors_ = true

[node name="SettingsMenu" parent="." node_paths=PackedStringArray("main_ui") instance=ExtResource("6_037la")]
unique_name_in_owner = true
visible = false
z_index = 3
layout_mode = 1
main_ui = NodePath("../Main")
